--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body{
 }
 #header{
     height: auto;
-    width: 100%;
+    width: 95%;
     padding: 12px;
     background-color: var(--mode-bcolor);
     display: flex;
@@ -117,9 +117,8 @@ body{
 }
 #note-wrapper{
     height: 100%;
-    width: 100%;
+    width: 95%;
     padding: 12px;
-    padding-left: 42px;
     gap: 12px;
     border: 1px solid var(--mode-fcolor);
     display: flex;
